[package]
name = "a-6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.32.2"
bitcoincore-rpc = "0.19.0"
bitcoind = "0.36.0"
dotenv = "0.15.0"
lazy_static = "1.5.0"

[dev-dependencies]
quickcheck = "1"
